Bug 396957 - NetworkManager Applet segmentation fault when VLAN dhcp fails => Plasmashell segfaults
Summary: NetworkManager Applet segmentation fault when VLAN dhcp fails => Plasmashell ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-07-29 13:04 UTC by Oliver Freyermuth
Modified: 2024-12-23 18:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Freyermuth 2018-07-29 13:04:29 UTC
Application: plasmashell (5.12.5)
 (Compiled from sources)
Qt Version: 5.9.6
Frameworks Version: 5.46.0
Operating System: Linux 4.17.2-gentoo x86_64
Distribution: "NAME=Gentoo"

-- Information about the crash:
- Custom settings of the application:

VLAN connection created for eth0 with method=auto. 
This is a laptop, the VLAN is not available every time I boot. 
If I am at a place where it is not available, VLAN stays activating and never finishes - but segfaults, pulling plasmashell with it. 

Only workaround: 
nmcli con down <connectionname>
Then Network Manager applets stops segfaulting. 

In a previous version of network manager / qt it was working. Sadly, I don't know which version exactly.

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
27	  return SYSCALL_CANCEL (nanosleep, requested_time, remaining);
[Current thread is 1 (Thread 0x7fd3383e06c0 (LWP 13104))]

Thread 15 (Thread 0x7fd23927c700 (LWP 21977)):
#0  0x00007fd3310c38f6 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x55ae1df7e4c4) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x55ae1df7e470, cond=0x55ae1df7e498) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x55ae1df7e498, mutex=0x55ae1df7e470) at pthread_cond_wait.c:655
#3  0x00007fd3322c68aa in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#4  0x00007fd335ee64c5 in ?? () from /usr/lib64/libQt5Quick.so.5
#5  0x00007fd335ee6dd2 in ?? () from /usr/lib64/libQt5Quick.so.5
#6  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd3310bc90a in start_thread (arg=0x7fd23927c700) at pthread_create.c:465
#8  0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 14 (Thread 0x7fd23a0b2700 (LWP 17475)):
#0  0x00007fd3310c38f6 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x55ae1ea03b60) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x55ae1ea03b10, cond=0x55ae1ea03b38) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x55ae1ea03b38, mutex=0x55ae1ea03b10) at pthread_cond_wait.c:655
#3  0x00007fd3322c68aa in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#4  0x00007fd335ee64c5 in ?? () from /usr/lib64/libQt5Quick.so.5
#5  0x00007fd335ee6dd2 in ?? () from /usr/lib64/libQt5Quick.so.5
#6  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd3310bc90a in start_thread (arg=0x7fd23a0b2700) at pthread_create.c:465
#8  0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 13 (Thread 0x7fd24a0d6700 (LWP 16886)):
#0  syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1  0x00007fd3102862e5 in ?? () from /usr/lib64/opengl/nvidia/lib/libGLX_nvidia.so.0
#2  0x00007fd310285f73 in ?? () from /usr/lib64/opengl/nvidia/lib/libGLX_nvidia.so.0
#3  0x00007fd2868b9c70 in ?? () from /usr/lib64/libnvidia-glcore.so.396.45
#4  0x00007fd2868b9d36 in ?? () from /usr/lib64/libnvidia-glcore.so.396.45
#5  0x00007fd2868672bc in ?? () from /usr/lib64/libnvidia-glcore.so.396.45
#6  0x00007fd28678805e in ?? () from /usr/lib64/libnvidia-glcore.so.396.45
#7  0x00007fd310284c1e in ?? () from /usr/lib64/opengl/nvidia/lib/libGLX_nvidia.so.0
#8  0x00007fd3207a17c2 in QGLXContext::swapBuffers (this=0x55ae1d7f58d0, surface=0x55ae1c46a670) at qglxintegration.cpp:549
#9  0x00007fd332c6f09d in QOpenGLContext::swapBuffers (this=0x7fd31c00dd10, surface=<optimized out>) at kernel/qopenglcontext.cpp:1111
#10 0x00007fd335ee25b6 in ?? () from /usr/lib64/libQt5Quick.so.5
#11 0x00007fd335ee6c94 in ?? () from /usr/lib64/libQt5Quick.so.5
#12 0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#13 0x00007fd3310bc90a in start_thread (arg=0x7fd24a0d6700) at pthread_create.c:465
#14 0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 12 (Thread 0x7fd251a51700 (LWP 15095)):
#0  0x00007fd32c93b9c0 in ?? () from /usr/lib64/libglib-2.0.so.0
#1  0x00007fd32c93df08 in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd32c93e83b in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd32c93ea3c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fd3324b888b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007fd332466dba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#6  0x00007fd3322c1cf3 in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd25236baa7 in KCupsConnection::run() () from /usr/lib64/libkcupslib.so
#8  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#9  0x00007fd3310bc90a in start_thread (arg=0x7fd251a51700) at pthread_create.c:465
#10 0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 11 (Thread 0x7fd254400700 (LWP 14624)):
#0  0x00007fd331b509e4 in __GI___poll (fds=0x7fd24c0049b0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fd32c93e916 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd32c93ea3c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd3324b888b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#4  0x00007fd332466dba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007fd3322c1cf3 in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#6  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd3310bc90a in start_thread (arg=0x7fd254400700) at pthread_create.c:465
#8  0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 10 (Thread 0x7fd27579a700 (LWP 13371)):
#0  0x00007fd3310c38f6 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x55ae1bb72680) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x55ae1bb72630, cond=0x55ae1bb72658) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x55ae1bb72658, mutex=0x55ae1bb72630) at pthread_cond_wait.c:655
#3  0x00007fd3322c68aa in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQt5Core.so.5
#4  0x00007fd335ee64c5 in ?? () from /usr/lib64/libQt5Quick.so.5
#5  0x00007fd335ee6dd2 in ?? () from /usr/lib64/libQt5Quick.so.5
#6  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd3310bc90a in start_thread (arg=0x7fd27579a700) at pthread_create.c:465
#8  0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 9 (Thread 0x7fd276f6f700 (LWP 13357)):
#0  0x00007fd331b509e4 in __GI___poll (fds=0x7fd26c023ca0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fd32c93e916 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd32c93ea3c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd3324b888b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#4  0x00007fd332466dba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007fd3322c1cf3 in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#6  0x00007fd335e68766 in ?? () from /usr/lib64/libQt5Quick.so.5
#7  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#8  0x00007fd3310bc90a in start_thread (arg=0x7fd276f6f700) at pthread_create.c:465
#9  0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7fd27cec6700 (LWP 13308)):
#0  0x00007fd32c984579 in g_mutex_lock () from /usr/lib64/libglib-2.0.so.0
#1  0x00007fd32c93e810 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd32c93ea3c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd3324b888b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#4  0x00007fd332466dba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007fd3322c1cf3 in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#6  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd3310bc90a in start_thread (arg=0x7fd27cec6700) at pthread_create.c:465
#8  0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7fd27d6c7700 (LWP 13306)):
#0  0x00007fd3322c5102 in ?? () from /usr/lib64/libQt5Core.so.5
#1  0x00007fd3324b876a in ?? () from /usr/lib64/libQt5Core.so.5
#2  0x00007fd32c93de1d in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd32c93e83b in ?? () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fd32c93ea3c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#5  0x00007fd3324b888b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#6  0x00007fd332466dba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd3322c1cf3 in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#8  0x00007fd27ea840d5 in ?? () from /usr/lib64/qt5/qml/QtQuick/XmlListModel/libqmlxmllistmodelplugin.so
#9  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#10 0x00007fd3310bc90a in start_thread (arg=0x7fd27d6c7700) at pthread_create.c:465
#11 0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7fd310dd3700 (LWP 13274)):
#0  0x00007fd3310c38f6 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x7fd337e30fb8) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x7fd337e30f68, cond=0x7fd337e30f90) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x7fd337e30f90, mutex=0x7fd337e30f68) at pthread_cond_wait.c:655
#3  0x00007fd337b3e054 in ?? () from /usr/lib64/libQt5Script.so.5
#4  0x00007fd337b3e099 in ?? () from /usr/lib64/libQt5Script.so.5
#5  0x00007fd3310bc90a in start_thread (arg=0x7fd310dd3700) at pthread_create.c:465
#6  0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7fd3139b4700 (LWP 13219)):
#0  0x00007fd32c984594 in g_mutex_unlock () from /usr/lib64/libglib-2.0.so.0
#1  0x00007fd32c93e321 in g_main_context_check () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd32c93e8b4 in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd32c93ea3c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fd3324b888b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007fd332466dba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#6  0x00007fd3322c1cf3 in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd3352d1a95 in ?? () from /usr/lib64/libQt5Qml.so.5
#8  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#9  0x00007fd3310bc90a in start_thread (arg=0x7fd3139b4700) at pthread_create.c:465
#10 0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7fd3196f2700 (LWP 13158)):
#0  0x00007fd331b4c1b9 in __GI___libc_read (fd=11, buf=0x7fd3196f1b70, nbytes=16) at ../sysdeps/unix/sysv/linux/read.c:26
#1  0x00007fd32c9831c0 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd32c93e3e2 in g_main_context_check () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd32c93e8b4 in ?? () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fd32c93ea3c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#5  0x00007fd3324b888b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#6  0x00007fd332466dba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd3322c1cf3 in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#8  0x00007fd3352d1a95 in ?? () from /usr/lib64/libQt5Qml.so.5
#9  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#10 0x00007fd3310bc90a in start_thread (arg=0x7fd3196f2700) at pthread_create.c:465
#11 0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7fd31b136700 (LWP 13139)):
#0  0x00007fd32c984579 in g_mutex_lock () from /usr/lib64/libglib-2.0.so.0
#1  0x00007fd32c93e334 in g_main_context_check () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd32c93e8b4 in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd32c93ea3c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fd3324b888b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007fd332466dba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#6  0x00007fd3322c1cf3 in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#7  0x00007fd3328cdec5 in ?? () from /usr/lib64/libQt5DBus.so.5
#8  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#9  0x00007fd3310bc90a in start_thread (arg=0x7fd31b136700) at pthread_create.c:465
#10 0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7fd3217c4700 (LWP 13120)):
#0  0x00007fd331b509e4 in __GI___poll (fds=0x7fd3217c3ca8, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fd336a6f85f in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007fd336a71409 in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007fd32371c1d9 in QXcbEventReader::run (this=0x55ae1bacf620) at qxcbconnection.cpp:1330
#4  0x00007fd3322c6221 in ?? () from /usr/lib64/libQt5Core.so.5
#5  0x00007fd3310bc90a in start_thread (arg=0x7fd3217c4700) at pthread_create.c:465
#6  0x00007fd331b5c33f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7fd3383e06c0 (LWP 13104)):
[KCrash Handler]
#6  QString::QString (other=<error reading variable: Cannot access memory at address 0x10>, this=0x7ffd33c1af90, this@entry=0x0) at /usr/include/qt5/QtCore/qstring.h:906
#7  NetworkManager::Device::uni (this=0x0) at /usr/src/debug/kde-frameworks/networkmanager-qt-5.46.0/networkmanager-qt-5.46.0/src/device.cpp:351
#8  0x00007fd24b0c8c4e in NetworkModel::checkAndCreateDuplicate (this=this@entry=0x55ae1dba0980, connection=..., device=...) at /usr/src/debug/kde-plasma/plasma-nm-5.12.5/plasma-nm-5.12.5/libs/models/networkmodel.cpp:487
#9  0x00007fd24b0cf1c1 in NetworkModel::addAvailableConnection (this=this@entry=0x55ae1dba0980, connection=..., device=...) at /usr/src/debug/kde-plasma/plasma-nm-5.12.5/plasma-nm-5.12.5/libs/models/networkmodel.cpp:290
#10 0x00007fd24b0cfea8 in NetworkModel::availableConnectionAppeared (this=0x55ae1dba0980, connection=...) at /usr/src/debug/kde-plasma/plasma-nm-5.12.5/plasma-nm-5.12.5/libs/models/networkmodel.cpp:597
#11 0x00007fd332490fae in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#12 0x00007fd24ae544c5 in NetworkManager::Device::availableConnectionAppeared (this=this@entry=0x55ae1f153790, _t1=...) at /usr/src/debug/kde-frameworks/networkmanager-qt-5.46.0/networkmanager-qt-5.46.0_build/src/KF5NetworkManagerQt_autogen/EWIEGA46WW/moc_device.cpp:861
#13 0x00007fd24ad9e85b in NetworkManager::DevicePrivate::propertyChanged (this=this@entry=0x55ae1ef06b70, property=..., value=...) at /usr/src/debug/kde-frameworks/networkmanager-qt-5.46.0/networkmanager-qt-5.46.0/src/device.cpp:232
#14 0x00007fd24add99af in NetworkManager::VlanDevicePrivate::propertyChanged (this=0x55ae1ef06b70, property=..., value=...) at /usr/src/debug/kde-frameworks/networkmanager-qt-5.46.0/networkmanager-qt-5.46.0/src/vlandevice.cpp:116
#15 0x00007fd24ad9cd52 in NetworkManager::DevicePrivate::propertiesChanged (this=0x55ae1ef06b70, properties=...) at /usr/src/debug/kde-frameworks/networkmanager-qt-5.46.0/networkmanager-qt-5.46.0/src/device.cpp:592
#16 0x00007fd24ae64535 in NetworkManager::DevicePrivate::qt_metacall (this=0x55ae1ef06b70, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7ffd33c1b510) at /usr/src/debug/kde-frameworks/networkmanager-qt-5.46.0/networkmanager-qt-5.46.0_build/src/KF5NetworkManagerQt_autogen/EWIEGA46WW/moc_device_p.cpp:117
#17 0x00007fd3328d90e0 in ?? () from /usr/lib64/libQt5DBus.so.5
#18 0x00007fd332491c19 in QObject::event(QEvent*) () from /usr/lib64/libQt5Core.so.5
#19 0x00007fd333339d6c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#20 0x00007fd3333415f9 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#21 0x00007fd33246809a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#22 0x00007fd33246ad2d in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQt5Core.so.5
#23 0x00007fd3324b8a83 in ?? () from /usr/lib64/libQt5Core.so.5
#24 0x00007fd32c93e717 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#25 0x00007fd32c93e988 in ?? () from /usr/lib64/libglib-2.0.so.0
#26 0x00007fd32c93ea3c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#27 0x00007fd3324b886f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#28 0x00007fd332466dba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#29 0x00007fd33246f384 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#30 0x000055ae1995ecec in ?? ()
#31 0x00007fd331a7c011 in __libc_start_main (main=0x55ae1995e310, argc=1, argv=0x7ffd33c1bd88, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffd33c1bd78) at ../csu/libc-start.c:308
#32 0x000055ae1995f08a in _start ()

Reported using DrKonqi
Comment 1 Jan Grulich 2018-08-07 10:21:56 UTC
Git commit 9a06a8e033a6f4dbfb690324cbf767b7cb3fa5ee by Jan Grulich.
Committed on 06/08/2018 at 08:37.
Pushed by grulich into branch 'Plasma/5.13'.

Add additional checks for device existence

There is a possibility that the device disappears during
the time we are getting its information

M  +9    -4    libs/models/networkmodel.cpp
M  +1    -1    libs/models/networkmodel.h

https://commits.kde.org/plasma-nm/9a06a8e033a6f4dbfb690324cbf767b7cb3fa5ee
Comment 2 Ben Cooksley 2024-12-23 18:23:39 UTC
Bulk transfer as requested in T17796