Add additional checks for device existence

There is a possibility that the device disappears during
the time we are getting its information

BUG:396957